--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Private Stateroom Ownership MLH</h1>
-								<p>By invitation only. Soon!<a href="https://html5up.net"> Now! Verified fungible cryptocurrency.</a>Cruise 12 MLH,<br />
-								<a href="https://html5up.net/license">Cruise 24 MLH,</a> Cruise 60 MLH</p>
+								<h1>Luxury Yacht Cryptocurrency</h1>
+								<p>By invitation only. Soon!<a href="https://umbrella-intwaters.pages.dev/"> Now! Verified fungible cryptocurrency.</a>Sym: YHTS<br />
+								<a href="https://html5up.net/license">Stellar Network,</a> 7.0</p>
 							</div>
 						</div>
 						<nav>
