--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Luxury Yacht Cryptocurrency</h1>
-								<p>By invitation only. Soon!<a href="https://umbrella-intwaters.pages.dev/"> Now! Verified fungible cryptocurrency.</a>Sym: YHTS<br />
-								<a href="https://html5up.net/license">Stellar Network,</a> 7.0</p>
+								<p>By invitation only. Soon!<a href="https://umbrella-intwaters.pages.dev/"> Now! Verified fungible cryptocurrency.</a>"YHTS<br />
+								<a href="https://umbrella-intwaters.pages.dev/">Stellar Network,</a>Age 7.0</p>
 							</div>
 						</div>
 						<nav>
