--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 							<div class="inner">
 								<h1>Luxury Yacht Cryptocurrency</h1>
 								<p>By invitation only. Soon!<a href="https://umbrella-intwaters.pages.dev/"> Now! Verified fungible cryptocurrency.</a>"YHTS<br />
-								<a href="https://umbrella-intwaters.pages.dev/">Stellar Network,</a>Age 7.0</p>
+								<a href="https://umbrella-intwaters.pages.dev/"></a>Age 7.0</p><p>"
+								The process of selling a yacht in the traditional way can take months, during which time the costs of maintenance fall on the owner. A small number of companies are hoping that blockchain technologies can change that and speed up the process of exchanging assets by, for example, using cryptocurrencies to purchase a yacht." ...Forbes</p>
 							</div>
 						</div>
 						<nav>
