--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>soon</article>
+								<p>Stellar Network utility token. </article>
 
 						<!-- Work -->
 							<article id="work">
