--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/PSX_20220803_15111.jpg" alt="" /></span>
 								<p>Stellar Network utility token. </article>
 
 						<!-- Work -->
