--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 								<h1>Luxury Yacht Cryptocurrency</h1>
 								<p>By invitation only. Soon!<a href="https://umbrella-intwaters.pages.dev/"> Now! Verified fungible cryptocurrency. On the stellar network</a>"YHTS"<br />
 								<a href="https://umbrella-intwaters.pages.dev/"></a>Age 8.0</p><p>"
-								The process of selling a yacht in the traditional way can take months, during which time the costs of maintenance fall on the owner. A small number of companies are hoping that blockchain technologies can change that and speed up the process of exchanging assets by, for example, using cryptocurrencies to purchase a yacht." ...Forbes</p>
+								
+
+
+How long have yacht Cryptocurrency payments been possible?
+
+One of the first companies to introduce cryptocurrency as a method of yacht payment is Denison Yachting. Back in 2016The process of selling a yacht in the traditional way can take months, during which time the costs of maintenance fall on the owner. A small number of companies are hoping that blockchain technologies can change that and speed up the process of exchanging assets by, for example, using cryptocurrencies to purchase a yacht." ...Forbes</p>
+							
 							</div>
 						</div>
 						<nav>
